# GlitchForge

./: .coveragerc  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
glitch_forge/: _version.py  example.py  glitcher.py  parameter.py  ui.py
