[project]
name = "glitch_forge"
version = "1.0.0"
authors = [
  { name="Lukas Ukelis", email="lukasukelis@gmail.com" },
]
description = "sss"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "PyQt6>=6.8.1"
]
[project.urls]
Homepage = "https://github.com/LukasUkelis/GlitchForge"
Issues = "https://github.com/LukasUkelis/GlitchForge/issues"